force-app/main/default/objects/TriggerEnablement__mdt/TriggerEnablement__mdt.object-meta.xml
<CustomObject>
    <description>Metadata configuration to enable or disable trigger functionality per DML Event</description>
    <label>Trigger Enablement</label>
    <pluralLabel>Trigger Enablements</pluralLabel>
</CustomObject>