force-app/main/default/objects/TriggerEnablement__mdt/fields/AfterDelete__c.field-meta.xml
<CustomField>
    <fullName>AfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box if the trigger functionality needs to be active at after delete DML statement</description>
    <label>After Delete</label>
    <type>Checkbox</type>
</CustomField>