force-app/main/default/objects/TriggerEnablement__mdt/fields/AfterInsert__c.field-meta.xml
<CustomField>
    <fullName>AfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box if the trigger functionality needs to be active at after insert DML statement</description>
    <label>After Insert</label>
    <type>Checkbox</type>
</CustomField>