force-app/main/default/objects/TriggerEnablement__mdt/fields/AfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>AfterUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box if the trigger functionality needs to be active at after undelete DML statement</description>
    <label>After Undelete</label>
    <type>Checkbox</type>
</CustomField>