force-app/main/default/objects/TriggerEnablement__mdt/fields/AfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>AfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box if the trigger functionality needs to be active at after update DML statement</description>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>