force-app/main/default/objects/TriggerEnablement__mdt/fields/BeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>BeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box if the trigger functionality needs to be active at before delete DML statement</description>
    <label>Before Delete</label>
    <type>Checkbox</type>
</CustomField>