force-app/main/default/objects/TriggerEnablement__mdt/fields/BeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>BeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box if the trigger functionality needs to be active at before insert DML statement</description>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>