force-app/main/default/objects/TriggerEnablement__mdt/fields/BeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>BeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box if the trigger functionality needs to be active at before update DML statement</description>
    <label>Before Update</label>
    <type>Checkbox</type>
</CustomField>