force-app/main/default/objects/TriggerEnablement__mdt/fields/SupportingClass__c.field-meta.xml
<CustomField>
    <fullName>SupportingClass__c</fullName>
    <description>the class that executes the trigger functionality</description>
    <label>Supporting Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>